fix broken update; add subject OR body regex check; regex alert and case sensitive flag support

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -147,6 +147,9 @@
   "fq.bodyRegex": {
     "message": "Body Regexp match"
   },
+  "fq.subjectBodyRegex": {
+    "message": "Subject || Body Regexp match"
+  },
   "fq.copyAsRead": {
     "message": "Copy As Read"
   },
