implemented body+subject search condition for Vasilly

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -252,6 +252,9 @@
   "fq.saveMsgAsFile.access": {
     "message": "D"
   },
+  "fq.subjectBodyRegex": {
+    "message": "Betreff oder Inhalt (Regulärer Ausdruck)"
+  },
   "fq.subjectRegex": {
     "message": "Betreff vergleichen (Regulärer Ausdruck)"
   },
