--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -252,6 +252,9 @@
   "fq.saveMsgAsFile.access": {
     "message": "I"
   },
+  "fq.subjectBodyRegex": {
+    "message": "Subject or Body Regexp match"
+  },
   "fq.subjectRegex": {
     "message": "Subject Regex Match"
   },
