--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -252,6 +252,9 @@
   "fq.saveMsgAsFile.access": {
     "message": "I"
   },
+  "fq.subjectBodyRegex": {
+    "message": "Reguliere expressie voor onderwerp- of e-mailtekst"
+  },
   "fq.subjectRegex": {
     "message": "RegEx-overeenkomst onderwerp"
   },
