--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -20,7 +20,7 @@
     }
   },
   "addon-authors-struggle": {
-    "message": "Чтобы и дальше оставаться полезными, нам, разработчикам дополнений, теперь необходимо финансировать ресурсы, необходимые для исправления и перезаписи, чтобы наши пользователи могли продолжать пользоваться предоставляемыми нами функциями."
+    "message": "Разработчикам дополнений необходимо финансирование для исправления ошибок и развития этого ПО, чтобы вы могли и дальше его использовать."
   },
   "btn-extend-license": {
     "message": "Я хочу продлить лицензию на один год"
@@ -72,7 +72,7 @@
     "message": "Быстро создавайте правила фильтрации почты на лету, перетаскивая письма и анализируя их атрибуты."
   },
   "extensionName": {
-    "description": "Name of the extension.",
+    "description": "Имя расширения.",
     "message": "FiltaQuilla"
   },
   "extensions.filtaquilla.description": {
@@ -115,7 +115,7 @@
     "message": "Выберите программу…"
   },
   "filtaquilla.runProgram.title": {
-    "message": "Выберите Программу для запуска"
+    "message": "Выберите программу для запуска"
   },
   "filtaquilla.selectFolder.btn": {
     "message": "Выбрать папку…"
@@ -142,7 +142,7 @@
     "message": "L"
   },
   "fq.attachmentRegex": {
-    "message": "Совпадение с регэкспом имени вложения"
+    "message": "Совпадение имени вложения с регэкспом"
   },
   "fq.bodyRegex": {
     "message": "Соответствие Body Regexp"
@@ -169,7 +169,7 @@
     "message": "F"
   },
   "fq.hdrRegex": {
-    "message": "Совпадение с регэкспом заголовка"
+    "message": "Совпадение заголовка с регэкспом"
   },
   "fq.hdrRegex.access": {
     "message": "H"
@@ -196,7 +196,7 @@
     "message": "E"
   },
   "fq.markUnread": {
-    "message": "Отметить как непрочитанное"
+    "message": "Пометить как непрочитанное"
   },
   "fq.markUnread.access": {
     "message": "M"
@@ -220,7 +220,7 @@
     "message": "P"
   },
   "fq.regex.caseInsensitive": {
-    "message": "Regex без учета регистра Match"
+    "message": "Регэксп совпадение без учета регистра"
   },
   "fq.removeflagged": {
     "message": "Удалить звездочку"
@@ -247,16 +247,16 @@
     "message": "H"
   },
   "fq.saveMsgAsFile": {
-    "message": "Сох"
+    "message": "Сохранить сообщение как файл"
   },
   "fq.saveMsgAsFile.access": {
     "message": "I"
   },
   "fq.subjectBodyRegex": {
-    "message": "Регулярное выражение для текста темы или письма"
+    "message": "Регэксп для текста темы или письма"
   },
   "fq.subjectRegex": {
-    "message": "Совпадение с регэкспом темы"
+    "message": "Совпадение темы с регэкспом"
   },
   "fq.subjectRegex.access": {
     "message": "S"
@@ -324,7 +324,7 @@
     "message": "Показать детали этой фичи"
   },
   "hours-effort": {
-    "message": "Мы уже потратили значительные ресурсы (более $hoursSpent$ часов) на проект преобразования - и предстоит еще много работы по исправлению регрессий и проблем, вызванных изменениями в Thunderbird.",
+    "message": "Мы уже потратили значительные ресурсы (более $hoursSpent$ часов) на преобразование проекта - и предстоит ещё много работы по исправлению регрессий и проблем, вызванных изменениями в Thunderbird.",
     "placeholders": {
       "hoursSpent": {
         "content": "$1",
@@ -354,8 +354,8 @@
     "message": "Mozilla предоставляет только базовую платформу для доставки нашего программного обеспечения вам, конечным пользователям. Если нам нужно запросить у наших пользователей оплату или поддержку, мы не сможем сделать это через addons.thunderbird.net - это не «магазин приложений» со встроенными платными доступом или управлением лицензиями, такими как iTunes или Google Play."
   },
   "notificationTitle": {
-    "description": "Title of the click notification.",
-    "message": "Click notification"
+    "description": "Название уведомления при щелчке.",
+    "message": "Уведомление при щелчке"
   },
   "ongoing-work": {
     "message": "Необходимые изменения для перехода на новую устаревшую модель (почтовый эксперимент) уже заняли несколько недель и все еще продолжаются, хотя некоторые функции могут быть затронуты. При использовании такого сложного дополнения дорогостоящая работа становится неизбежной. Пожалуйста, помогите нам с этим."
