--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -243,6 +243,9 @@
   "fq.runFile.access": {
     "message": "R"
   },
+  "fq.runFile.unicode": {
+    "message": "Parameters verzenden als UTF-16"
+  },
   "fq.saveAttachment": {
     "message": "Bijlagen opslaan in"
   },
