--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -200,7 +200,10 @@
     "message": "k"
   },
   "fq.runFile.unicode": {
-    "message": "Överför parametrar som UTF-16"
+    "message": "UTF-16 som standard"
+  },
+  "fq.runFile.unicode.tooltip": {
+    "message": "Använd tilläggsparametern @UTF16@ eller @UTF8@ för att använda individuell kodning"
   },
   "fq.saveAttachment": {
     "message": "Spara bifogade filer till"
