issue #165 - allow printing multiples

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -175,6 +175,9 @@
   "fq.print.access": {
     "message": "K"
   },
+  "fq.printAllowDuplicates": {
+    "message": "Duplikate zulassen"
+  },
   "fq.printTools": {
     "message": "Verwendet PrintingTools NG zum Drucken"
   },
